feat(table): add customer get table info
